# Instant-readme-gen

./: README.md  cli.py  pyproject.toml
